--- a/index.html
+++ b/index.html
@@ -1,24 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>
-Resume: Ahmad Yamien
- <meta charset="UTF-8"/>
-</head>
-</title>
-<h1>Ahmad Yamien</h1>
-<p style="text-align: left;"><strong>SKILLS</strong></p>
-<p>Computer systems knowledge&nbsp;</p>
-<p>&bull; Technical issues analysis</p>
-<p>&bull; Business administration Analytical skills</p>
-<p>&bull; Critical thinking &bull;</p>
-<p><span style='color: rgb(0, 0, 0); font-family: "Times New Roman"; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;'>&bull;</span>&nbsp; Developing brand messaging Interpersonal and written communication&nbsp;</p>
-<p><strong>PERSONAL SUMMARY&nbsp;</strong></p>
-<p>Currently, I am a Freshman living on campus at IIT. I have about 3 years of experience as a manager. Apart from that, I have all the computer skills needed for most of the tasks. Besides this, I am a provincial-level basketball player in my country. Other than that, I also managed one of Dj Kantik&apos;s most successful concerts.&nbsp;</p>
-<p><strong>WORK HISTORY&nbsp;</strong></p>
-<p>(Suzuki Motors - Sales Manager Faisalabad, Punjab &bull; 01/2018 - 12/2020)&nbsp;</p>
-<p>&bull;Enhance business development and maintain sustainability and customer satisfaction.</p>
-<p>&bull; Maintained relationships with customers and found new ones by identifying needs and offering appropriate services.</p>
-<p>&bull; Produced contracts, reports, letters, and proposals for clients.&nbsp;</p>
-<p>&bull; Organized promotional events and interacted with&nbsp;</p>
+    <head>
+        <title>Resume: Ahmad Yamien</title>
+        <meta charset="UTF-8"/>
+    </head>
+
+    <body>
+        <header class="header" >
+            <h1 class="head-1">Ahmad Yamien</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="index.html">Resume</a></li>
+
+                </ul>
+            </nav>
+            <h2 class="contact-info">
+                CONTACT
+            </h2>
+            <ul class="contact">
+                <li>
+                    <a class="u-email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
+                </li>
+                <li>
+                    <a class="u-url linkedin" href="https://github.com/Ch-ahmad">LinkedIn Profile</a>
+                </li>
+                <li>
+                    <a class="u-url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
+                </li>
+                <li>
+                    <a class="u-url instagram" href="https://www.facebook.com/ahmad.yamin6666">Instagram Profile</a>
+                </li>
+
+            </ul>
+        </header>
+
+        <section class="education">
+            <h2>EDUCATION</h2>
+            <ul class="education">
+                <li>
+                    <h3>Information Technology and Management</h3>
+                    <ul>
+                        <li>
+                            Illinois Institute of Technology, Chicago, IL
+                        </li>
+
+                        <li>
+                            Current GPA: 3.4
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="Personal Summary">
+            <h2>PERSONAL SUMMARY</h2>
+            <ul class="summary">
+                  <p>I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br>
+                     Apart from that, I have all the computer skills required for the majority of the tasks.
+                      Besides that, I am a national-level <br> basketball player of the under 18 team (Pakistan).</p>
+                    </ul>
+
+
+
+    </body>
+
 </html>
