added another page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Resume: Ahmad Yamien</title>
+        <title>Home: Ahmad Yamien</title>
         <meta charset="UTF-8"/>
     </head>
 
@@ -11,8 +11,8 @@
             <h1 class="head-1">Ahmad Yamien</h1>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Resume</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume/index.html">Resume</a></li>
 
                 </ul>
             </nav>
@@ -54,13 +54,7 @@
             </ul>
         </section>
 
-        <section class="Personal Summary">
-            <h2>PERSONAL SUMMARY</h2>
-            <ul class="summary">
-                  <p>I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br>
-                     Apart from that, I have all the computer skills required for the majority of the tasks.
-                      Besides that, I am a national-level <br> basketball player of the under 18 team (Pakistan).</p>
-                    </ul>
+
 
 
 
