--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="resume/index.html">Resume</a></li>
+                    <li><a href="hobbies/index.html">Hobbies</a></li>
 
                 </ul>
             </nav>
