--- a/resume/index.html
+++ b/resume/index.html
@@ -12,8 +12,8 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="resume/index.html">Resume</a></li>
-                    <li><a href="hobbies/index.html">Hobbies</a></li>
+                    <li><a href="index.html">Resume</a></li>
+                    <li><a href="../hobbies/index.html">Hobbies</a></li>
 
                 </ul>
             </nav>
