--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
             </ul>
         </section>
 
-        
+        <section class="Personal Summary">
+            <h2>PERSONAL SUMMARY</h2>
+            <ul class="summary">
+                  <p>I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br>
+                     Apart from that, I have all the computer skills required for the majority of the tasks.
+                      Besides that, I am a national-level <br> basketball player of the under 18 team (Pakistan).</p>
+                    </ul>
+
+
 
 
 
