--- a/resume/index.html
+++ b/resume/index.html
@@ -55,13 +55,40 @@
             </ul>
         </section>
 
-        <section class="Personal Summary">
-            <h2>PERSONAL SUMMARY</h2>
-            <ul class="summary">
-                  <p>I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br>
-                     Apart from that, I have all the computer skills required for the majority of the tasks.
-                      Besides that, I am a national-level <br> basketball player of the under 18 team (Pakistan).</p>
+        <section class="skills">
+            <h2>SKILLS</h2>
+            <ul class="skills">
+                    <ul>
+                        <li>
+                          Technical issues analysis
+                        </li>
+
+
+                        <li>
+                          Business administration
+                        </li>
+
+                        <li>
+                          Computer systemsknowledge
+                        </li>
+
+                        <li>
+                          Analytical skills
+                        </li>
+
+                        <li>
+                          Developing brand messaging
+                        </li>
+
+                        <li>
+                          Interpersonal and written communication
+                        </li>
                     </ul>
+            </ul>
+        </section>
+
+        
+
 
 
 
