--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="u-email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
                 </li>
                 <li>
-                    <a class="u-url linkedin" href="https://github.com/Ch-ahmad">LinkedIn Profile</a>
+                    <a class="u-url github" href="https://github.com/Ch-ahmad">Github Profile</a>
                 </li>
                 <li>
                     <a class="u-url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
