--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header class="header" >
-            <h1 class="head-1">Ahmad Yamien</h1>
+            <h1 class="name">Ahmad Yamien</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
