--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Home: Ahmad Yamien</title>
-        <meta charset="UTF-8"/>
-    </head>
 
-    <body>
-        <header class="header" >
-            <h1 class="name">Ahmad Yamien</h1>
-            <nav>
+<head>
+    <title>Home: Ahmad Yamien</title>
+    <meta charset="UTF-8" />
+</head>
+
+<body>
+    <header class="header">
+        <h1 class="name">Ahmad Yamien</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="resume/index.html">Resume</a></li>
+                <li><a href="Hobbies/index.html">Hobbies</a></li>
+
+            </ul>
+        </nav>
+        <h2 class="contact-info">
+            CONTACT
+        </h2>
+        <ul class="contact">
+            <li>
+                <a class="u-email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
+            </li>
+            <li>
+                <a class="u-url github" href="https://github.com/Ch-ahmad">Github Profile</a>
+            </li>
+            <li>
+                <a class="u-url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
+            </li>
+            <li>
+                <a class="u-url instagram" href="https://www.facebook.com/ahmad.yamin6666">Instagram Profile</a>
+            </li>
+
+        </ul>
+    </header>
+
+    <section class="education">
+        <h2>EDUCATION</h2>
+        <ul class="education">
+            <li>
+                <h3>Information Technology and Management</h3>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="resume/index.html">Resume</a></li>
-                    <li><a href="Hobbies/index.html">Hobbies</a></li>
+                    <li>
+                        Illinois Institute of Technology, Chicago, IL
+                    </li>
 
+                    <li>
+                        Current GPA: 3.4
+                    </li>
                 </ul>
-            </nav>
-            <h2 class="contact-info">
-                CONTACT
-            </h2>
-            <ul class="contact">
-                <li>
-                    <a class="u-email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
-                </li>
-                <li>
-                    <a class="u-url github" href="https://github.com/Ch-ahmad">Github Profile</a>
-                </li>
-                <li>
-                    <a class="u-url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
-                </li>
-                <li>
-                    <a class="u-url instagram" href="https://www.facebook.com/ahmad.yamin6666">Instagram Profile</a>
-                </li>
+            </li>
+        </ul>
+    </section>
 
-            </ul>
-        </header>
+    <section class="Personal Summary">
+        <h2>PERSONAL SUMMARY</h2>
 
-        <section class="education">
-            <h2>EDUCATION</h2>
-            <ul class="education">
-                <li>
-                    <h3>Information Technology and Management</h3>
-                    <ul>
-                        <li>
-                            Illinois Institute of Technology, Chicago, IL
-                        </li>
+            I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br> Apart from that, I have all the computer skills required for the majority of the tasks. Besides that,
+            I am a national-level <br> basketball player of the under 18 team (Pakistan).
 
-                        <li>
-                            Current GPA: 3.4
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-
-        <section class="Personal Summary">
-            <h2>PERSONAL SUMMARY</h2>
-            <ul class="summary">
-                  <p>I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br>
-                     Apart from that, I have all the computer skills required for the majority of the tasks.
-                      Besides that, I am a national-level <br> basketball player of the under 18 team (Pakistan).</p>
-                    </ul>
+    </section>
 
 
 
@@ -69,6 +69,6 @@
 
 
 
-    </body>
+</body>
 
 </html>
