--- a/Hobbies/index.html
+++ b/Hobbies/index.html
@@ -29,13 +29,15 @@
 
           <h3>Cricket</h3>
           <p>Cricket has always been my most favourite sports to play and watch. In countiries like Pakistan and India crickets <br>
-             is very popular. From my childhood i have been playing cricket in garage and streets and during my high-school i have <br>
+             is very popular. From my childhood i have been playing cricket in garage and streets and during my high-school.</p>
 
           <h3>E-sports</h3>
           <p>For last 4-5 years I have spend alot of my free time playing e-games. First Person Shooter(FPS) games have always been my <br>
              favourite. Recently I have been playing PUBG Mobile alot and partcicpated in a few tournaments with my team. Its a good thing <br>
               to do as it helps in enhancing the focusing ability.</p>
 
+
+       </section>
 
 
 
