--- a/resume/index.html
+++ b/resume/index.html
@@ -4,9 +4,11 @@
     <head>
         <title>Resume: Ahmad Yamien</title>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="../css/screen.css">
     </head>
 
     <body>
+
         <header class="header" >
             <h1 class="head-1">Ahmad Yamien</h1>
             <nav>
