--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 
             </ul>
         </nav>
-        <h2 class="contact-info">
+        <h2 class="contact_info">
             CONTACT
         </h2>
         <ul class="contact">
             <li>
-                <a class="u-email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
+                <a class="u_email" href="ayamien@hawk.iit.edu">ayamien@hawk.iit.edu</a>
             </li>
             <li>
-                <a class="u-url github" href="https://github.com/Ch-ahmad">Github Profile</a>
+                <a class="u_url github" href="https://github.com/Ch-ahmad">Github Profile</a>
             </li>
             <li>
-                <a class="u-url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
+                <a class="u_url facebook" href="https://www.facebook.com/ahmad.yamin6666">Facebook Profile</a>
             </li>
             <li>
-                <a class="u-url instagram" href="https://www.facebook.com/ahmad.yamin6666">Instagram Profile</a>
+                <a class="u_url instagram" href="https://www.facebook.com/ahmad.yamin6666">Instagram Profile</a>
             </li>
 
         </ul>
@@ -55,20 +55,13 @@
         </ul>
     </section>
 
-    <section class="Personal Summary">
+    <section class="personal_summary">
         <h2>PERSONAL SUMMARY</h2>
 
-            I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br> Apart from that, I have all the computer skills required for the majority of the tasks. Besides that,
-            I am a national-level <br> basketball player of the under 18 team (Pakistan).
+        I am a motivated business and computer scientist, currently gaining proficiency in all fields that affect my entrepreneurship career.<br> Apart from that, I have all the computer skills required for the majority of the tasks. Besides that, I am
+        a national-level <br> basketball player of the under 18 team (Pakistan).
 
     </section>
-
-
-
-
-
-
-
 </body>
 
 </html>
